--- a/Final_Manuscript.Rmd
+++ b/Final_Manuscript.Rmd
@@ -66,14 +66,14 @@ library(lavaan)
 library(xtable)
 ```
     
-@robertsfredrickson Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link (CITE INTERPERSONAL PROCESS LINKS LITERATURE). For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
+@robertsfredrickson Objectification Theory, suggests that women are objectified in interpersonal encounters, and that the effect might be strongest from men, but possibly also from women. Psychological researchers studying the sexual objectification of women, and the resulting self-objectification that follows, have in recent years explored the interpersonal process of the objectification - self-objectification link [@garcia2016objectification, @strelan2018birds, @riemer2020self]. For example, in a face-to-face mixed-gender dyadic study, @garcia2016objectification found that men's reported objectification of their female interaction partner during an interaction was associated with increased self-objectification reported by their partner. @gervais2020social has reviewed the literature on interpersonal self-objectification and has organized the the process in a theoretical model called the SIMO, but this model is only relevant for mixed-gender encounters. Although there is ample evidence that women objectify other women [@loughnan2015exploring; @puvia2013being], there is currently no studies investigating the process of interpersonal objectification same-gender interactions. Does objectification by a female interaction partner have the same downstream negative consequences as being objectified by a male interaction partner? For example, perhaps women could be amplifying each others' self-objectification as they get ready to go out for the night, *before* the theoretical encounters with men outlined in @gervais2020social occur. 
 
 ##Self-Objectification
 Self-objectification is a multidimensional process that accounts for the cognitive mechanism that translates experiences of sexualization at the cultural level [@loughnan2015exploring] to psychological (e.g., anxiety, self-esteem, authenticity, motivational states) and behavioral (cognitive performance, body monitoring) features of mental health and well-being at the individual level [@calogero2011; @moradi2008]. @calogero2011 proposes that the construct of self-objectification can be conceptualized as a learned trait. Furthermore, it can also be elicited momentarily, through the media, for example, with sexualized images in movies and magazines [@morry2001magazine], which can lead to a state of self-objectification [@bernard2018bodies; @calogero2011; @moradi2008]. Being objectified by another person and possessing trait-level self-objectification (TSO) may interact to influence experiences of feeling like a body, or state self-objectification (SSO) [@fredrickson1998swimsuit, @garcia2016objectification]. Does this habit self-objectification lead women to also objectify other women, possibly to compare oneself? 
 
 ##Women Objectifying Women
 Past research has focused on men’s objectifying behaviors, with little attention to the role that women may also play in enacting objectification of women. @hill2008examining assessed women’s experiences of objectification from men separately from women’s experiences of objectification from women and found that women may be socialized not only to see themselves as objects but perhaps to see other women as objects as well (THEY DIDN'T DETERMINE THIS IN PERSON).
-Some studies have found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know next to nothing about interpersonal sexual objectification among women and what the immediate effects might be. Further, do women objectify non-sexualized women they are interacting with? What might be different for same-gender interactions? @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants, although men scored high than women on a measure of belief that objectification of women is natural for men. ASK RANDI-WE KNOW OBJECTIFICATION HAS MORE ADVERSE CONSEQUENCES FOR WOMEN THAN MEN (Gervais, Vescio, & Allen, 2011; Moradi & Huang, 2008; Saguy, Quinn, Dovidio, & Pratto, 2010)...MENTION THAT...HOWEVER DOES WOMEN OBJECT WOMEN TO A GREATER EXTENT THAN MEN MATTER MORE?...STILL TRYING TO FIGURE THAT OUT? ADDITIONALLY @strelan2005women FOUND THAT THE MORE WOMEN SELF-OBJECTIFY, THE MORE THEY OBJECTIFY OTHER WOMEN.
+Some studies have found that women objectify other women to a greater extent than they objectify men [@loughnan2015exploring]. Women objectify (dehumanized) sexualized targets presented as images [@puvia2013being], but we know next to nothing about interpersonal sexual objectification among women and what the immediate effects might be. Further, do women objectify non-sexualized women they are interacting with? What might be different for same-gender interactions? @harsey2020men found that self-objectification was related to the objectification of women to a similar degree for men and women participants, although men scored high than women on a measure of belief that objectification of women is natural for men. Additionally, @strelan2005women found that the more women self-objectify, the more they objectify other women.  ASK RANDI-WE KNOW OBJECTIFICATION HAS MORE ADVERSE CONSEQUENCES FOR WOMEN THAN MEN (Gervais, Vescio, & Allen, 2011; Moradi & Huang, 2008; Saguy, Quinn, Dovidio, & Pratto, 2010)...MENTION THAT...HOWEVER DOES WOMEN OBJECT WOMEN TO A GREATER EXTENT THAN MEN MATTER MORE?...STILL TRYING TO FIGURE THAT OUT? ADDITIONALLY 
 
 ##Interpersonal Objectification
 SIMO model and literature review [@gervais2020social]. Studies have shown that within social encounters women are gazed at more than men [@briton1995], often times feel ‘looked at’ within interpersonal interactions [@argyle1969; @miles2015stop], and will more than likely internalize the objectifying gaze on physical self [@puvia2013being; @young1979]. Moreover, perhaps the most adverse effect of objectifying treatment is that it effectively socializes girls and women to treat themselves as objects to be looked at and evaluated, an effect termed self-objectification  [@Bartky; @berger1972; @fredrickson1998swimsuit]. We don't know about women-on-women interpersonal objectification. What might be different?
@@ -83,7 +83,7 @@ Self-objectification has been found to occur after a mere relationship prime amo
 There is evidence that the experience of state self-objectification in mixed-gender contexts (stranger and romantic) and within the self in any moment (trying on a swimsuit) has negative consequences, but what about in the context of interaction with other women? Is the self-objectification experience in mixed-gender interactions the same as that experienced in same-gender interactions? The ample research demonstrating that the male gaze has a particularly detrimental effect would suggest no [@saguyetal2010, @calogero2004test; @gervais2011you; @gay2010my; @yilmaz2019whose]. Women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], but when they do it, does it lead to self-objectification in the same way men's objectification of women does [@garcia2016objectification]? If so, does the self-objectification experienced in these same-gender interactions have the same negative consequences for authenticity in that interaction?  
 
 ##Interpersonal Objectification and Authenticity
-There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the literature on stigmatized-stigmatizer interactions (CITE LITERATURE DIDN'T COME ACROSS THIS), viewing the experience of being objectified in an interaction as an identity threat situation (MAYBE CITE MILES-MCLEAN PAPER "STOP LOOKING AT ME!"). When a woman is objectified by a man, and then experiences self-objectification, this intergroup encounter might trigger identitiy threat, but is the same negative consequence present when a woman is objectified by another woman? woman-woman interpersonal objectification processes might diverge from this process. One the one hand, she may not be having the same negative consequences the cascade from situations that threated group-based identity [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in an interaction may be enough to reduce feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor]. I DONT KNOW WHERE THIS PAPER IS? ASK RANDI ABOUT IDENTITY_THREAT PAPERS 
+There is some evidence that reduced authenticity is a consequence of self-objectification in the moment [@garcia2016objectification; again CITE PWQ paper I reviewed, Yoder editor]. This link has been justified by the literature on stigmatized-stigmatizer interactions [@hebl2005promoting] (CITE LITERATURE DIDN'T COME ACROSS THIS), viewing the experience of being objectified in an interaction as an identity threat situation [@miles2015stop]. When a woman is objectified by a man, and then experiences self-objectification, this intergroup encounter might trigger identitiy threat, but is the same negative consequence present when a woman is objectified by another woman? Woman-woman interpersonal objectification processes might diverge from this process. One the one hand, she may not be having the same negative consequences the cascade from situations that threated group-based identity [@deaux1987putting; @dovidio2006nonverbal; @hebl2005promoting], but feeling like a body, rather than a full human, in an interaction may be enough to reduce feelings of authenticity and social competence, regardless of the gender of the objectifyer [@tolman2006looking; PWQ paper I reviewed, Yoder editor].
 
 ##The Current Study
 In the current study, we sought to examine what occurs during an interaction in which one or both partners are objectifying each other, similarly to @garcia2016objectification,  but between same-sex female interpersonal interactions. Moreover, the current study uses a face-to-face interaction paradigm and dyadic data analysis techniques to examine the effects for both women simultaneously. We expected to replicate the results found in @garcia2016objectification. We predicted that being objectified by one’s interaction partner would lead to self-objectification, which in turn would lead to feelings of inauthenticity, then reduced feelings of agency in romantic relationships, reduced career aspiration, and reduced cognitive performance. Specifically, we expected to find a positive relationship between other-objectification by one's partner and state self-objectification. We also expect to find a negative relationship between self-state objectification and interaction authenticity, and that interaction authenticity will be positively related to cognitive performance, relationship agency, and career aspirations.
@@ -634,15 +634,15 @@ Lastly, although there was no evidence that SSO was related to interaction authe
 The results were similar for analyses conducted on Sample 1 and Sample 2 individually. See the online supplemental material for more detail on these analyses. 
 
 #Discussion
-The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past reserach has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship bewteen a woman's partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, it could be that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also results in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
+The current study tested whether the model of interpersonal objectification and state self-objectification (SSO) used in @garcia2016objectification replicates in a same-gender dyadic sample of women only. Although past research has found that women do objectify other women [@puvia2013being; @loughnan2015exploring; @harsey2020men], this is the first study to test if *interpersonal* other-objectification by women is related to state self-objectification in their woman-identified interaction partners. As hypothesized, the current study did find a significant relationship between a woman's partner's report of having objectified her and her own post-interaction feelings of self-objectification. That is, there was a significant partner effect of other-objectification on SSO. This effect extends the equivalent relationship found in mixed-gender interactions to the context of same-gender interactions between women. Thus, it could be that it is not only the male gaze, and male other-objectification that is related to women's state self-objectification, but being objectified by another woman can also results in SSO, at least in the context of a scenario where they know they are being evaluated as a potential dating partner. 
 
-As is the case in all correlational studies, we cannot be sure in the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation in theoreticall interesting given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO this relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson], as well as past experimental studies [@saguyetal2010; CITE], suggest that the causal flow is from other-objectification to SSO. Although, importantly, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
+As is the case in all correlational studies, we cannot be sure in the causal direction. It could be that women's SSO causes them to be objectified by their interaction partner. This interpretation is theoretically interesting given that, in both the @garcia2016objectification study and in the current study, it is *women's* SSO this relates to being objectified by one's partner. However, Objectification Theory [@robertsfredrickson], as well as past experimental studies [@saguyetal2010; CITE], suggest that the causal flow is from other-objectification to SSO. Although, importantly, the current study found evidence for the partner effect of other-objectification on SSO, there was a lack of evidence for the connections between SSO and downstream negative consequences. 
 
 Where the results of the current study diverge most notably from the results of studies testing interpersonal objectification among mixed-gender dyads is the lack of evidence for relationships between SSO and felt inauthenticity. In addition, we found no evidence of *direct* or *indirect* relationships between SSO and cognitive functioning, relationship agency, and career aspirations. Nor was there evidence of *direct* or *indirect* relationships between other-objectification and any of these outcomes. This is somewhat suprising given the plentiful evidence linking SSO and cognitive functioning [@fredrickson1998swimsuit; @quinn2011performance] and the small, but extant research on interpersonal other-ojectification and cognitive functioning [@logel2009interacting; @garcia2016objectification]. This lack of evidence could potentially signal diverging processs between women's experiences with interpersonal objectification from men and interpersonal objectification from women. There is quite a bit of evidence suggesting that the male gaze is particularly detrimental [@calogero2004test; @robertsfredrickson; @gervais2011you; @gervais2013my], and perhaps the self-objectification experienced within an interaction with a women is not as harmful as the self-objectificatoin experienced within an interaction with a man. However, as a strong note of caution, we need to be careful not to interpret a null result as evidence of no relationship. 
 
 The lack of evidence for a relationship between SSO and interaction authenticity is surprising and again, should not be interpreted as evidence of no realtionship. It should be noted that the estimate of this relationship was very small, but in the negative direction, as anticipated. If it is the case that there is a smaller (i.e., weaker) connection between women's feelings of SSO and inauthenticity in interactions with other women then in interactions with men, models of interpersonal objectification, like the SIMO [@gervais2020social], could be extended by including inauthenticity as a potential mediating factor in decisions to continue objectifying interactions. Further, gender of the objectifyer/interaction partner could also be added to the SIMO model to help extend our understanding of under what circumstances other-objectification and SSO have negative concequences for women.  
 
-Although we did not find a connection bewteen SSO and authenticity we did find significant positive relationships between authenticity and relationship agency and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but it was not statistically signfiicant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corrborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; PWQ paper I reviewed]. Just as authenticity has been found to be important in intergroup interactions [CITE; CITE; CITE], we again find more evidence here that distuptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and more work needs to be done to discover when and how SSO leads to inauthenticity in interpersonal objectification situations. 
+Although we did not find a connection between SSO and authenticity we did find significant positive relationships between authenticity and relationship agency and career aspirations. The relationship between authenticity and cognitive functioning was also estimated as positive, but it was not statistically signficant. Again, due to the lack of connection between SSO and authenticity, we found no evidence of *indirect* relationships between SSO and these outcome variables. This evidence of a relationship between authenticity and the relational outcome variables (i.e., relationship agency and career aspirations) provides evidence that corroborates past findings that felt authenticity in interactions is important for healthy relationship functioning [@garcia2016objectification; PWQ paper I reviewed]. Just as authenticity has been found to be important in intergroup interactions [@brunelletal2010; @garcia2016objectification; @tolman2006looking], we again find more evidence here that distuptions in feelings of authenticity can negatively impact relationships beyond the current partner. Although the current study did not find a connection between authenticity and SSO, this seems theoretically to be a natural connection, and more work needs to be done to discover when and how SSO leads to inauthenticity in interpersonal objectification situations. 
 
 
 ##Limitations and Future Directions
