--- a/references.bib
+++ b/references.bib
@@ -635,6 +635,14 @@ doi = {10.1177/0956797609357751}
   year={2019}
 }
 
+@article{riemer2020self,
+  title={Self-fulfilling objectification in relationships: The effects of men’s objectifying expectations on women’s self-objectification during conflict in romantic relationships},
+  author={Riemer, Abigail R and S{\'a}ez, Gemma and Brock, Rebecca and Gervais, Sarah J},
+  journal={Self and Identity},
+  pages={1--7},
+  year={2020},
+  publisher={Taylor \& Francis}
+}
 
 @article{brunelletal2010, title={Dispositional authenticity and romantic relationship functioning}, volume={48}, DOI={10.1016/j.paid.2010.02.018}, number={8}, journal={Personality and Individual Differences}, author={Brunell, Amy B. and Kernis, Michael H. and Goldman, Brian M. and Heppner, Whitney and Davis, Patricia and Cascio, Edward V. and Webster, Gregory D.}, year={2010}, pages={900–905}}
 
